--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_svg: ^0.12.4
+  fluttery_seekbar: ^0.0.1
+  reflectable: ^2.0.10+1
+  sqflite: ^1.1.5
+
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.7.0"
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  android: "launcher_icon" 
+  ios: true
+  image_path: "images/logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
@@ -41,7 +51,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - images/
+
+  fonts:
+    - family: Habibi
+      fonts:
+        - asset: fonts/Habibi-Regular.ttf
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
