--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_date_picker: "^0.1.8"
   flutter_svg: ^0.12.4
   fluttery_seekbar: ^0.0.1
+  path_provider: ^0.5.0+1
+  permission_handler: ^3.0.0
   reflectable: ^2.0.10+1
   sqflite: ^1.1.5
 
